AUTHX-22 Add /profiles/me and /profiles/me/employee-id endpoints (#23)
